app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: example
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: example
  type: NodePort
